# 360-w-raw-gadget

./: .gitignore  .gitlab-ci.yml  360-gadget.c  360-gadget.h  360-w-gadget.c  360-w-gadget.h  Cargo.toml  LICENSE  Makefile  README.md  btpassthrypoc.py  controlread.py  example.c  usb_descriptors.c  usb_descriptors.h  usb_helpers.c  usb_helpers.h  usb_io.c  usb_io.h
.cargo/: config.toml
.github/workflows/: ci.yml
BashDevicePocs/: multicontroller_attempt.sh  xboxcontroller_correct_report.sh
src/: capi.rs  controller.rs  data.py  descriptors.rs  ffi.rs  lib.rs  main.rs  protocol.rs  session.rs  transport_hw.rs  udc.rs  xboxInp.py  xboxpoc.py
src/xboxDev/: xboxDescriptors.py  xboxDev.py  xboxEndpoints.py  xboxInterfaces.py
