[package]
name = "x360-w-raw-gadget"
version = "1.0.4"
edition = "2021"
rust-version = "1.70"
description = "Xbox 360 wireless receiver emulator for Linux via raw-gadget — Rust core + C FFI shared library"
license = "MIT"
repository = "https://github.com/CasperVM/360-w-raw-gadget"
keywords = ["xbox360", "gamepad", "usb-gadget", "hid", "embedded-linux"]
categories = ["hardware-support", "emulators", "os::linux-apis"]
exclude = [
    "*.c",
    "*.h",
    "Makefile",
    "target/",
]

[lib]
name = "x360_w_raw_gadget"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
libc = "0.2"

[[bin]]
name = "x360-w-gadget"
path = "src/main.rs"
